# generatecv

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: ACTIONS_TROUBLESHOOTING.md  ISSUE_TEMPLATE_GUIDE.md  SETUP.md  cliff.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-documentation.yml  3-feature-request.yml  config.yml
.github/security-reports/: 2025-05-25-0646.md  2025-05-25-0717.md  2025-05-25-0957.md  2025-05-25-1031.md  2025-05-25-1051.md  2025-05-25-1103.md  2025-05-25-1221.md  2025-05-28-1226.md  2025-05-31-1222.md  2025-06-01-1223.md  2025-06-04-1226.md  2025-06-07-1222.md  2025-06-10-1226.md  2025-06-13-1225.md  2025-06-16-1226.md  2025-06-19-1226.md  2025-06-22-1222.md  2025-06-25-1226.md  2025-06-28-1223.md  2025-07-01-1226.md  2025-07-04-1225.md  2025-07-07-1226.md  2025-07-10-1226.md  2025-07-13-1224.md  2025-07-16-1227.md  2025-07-19-1224.md  2025-07-22-1227.md  2025-07-25-1227.md  2025-07-28-1228.md  2025-07-31-1226.md  2025-08-01-1227.md  2025-08-04-1229.md  2025-08-07-1229.md  2025-08-10-1224.md  2025-08-13-1227.md  2025-08-16-1223.md  2025-08-19-1225.md  2025-08-22-1224.md  2025-08-25-1226.md  2025-08-28-1224.md  (+107 more)
.github/workflows/: README.md  auto-label.yml  changelog.yml  docs.yml  publish.yml  python-ci.yml  python-publish.yml  security.yml
api/: index.html
contributing/: index.html
docs/: contributing.md  examples.md  getting-started.md  index.md
docs/api/: index.md
examples/: index.html
getting-started/: index.html
search/: search_index.json
site/: index.html  objects.inv
site/api/: index.html
site/contributing/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/generatecv/: __init__.py  cv_generator.py  models.py  pdf_generator.py
src/generatecv/parser/: yaml.py
src/generatecv/styles/: __init__.py  base_style.py  classic_style.py
src/tool/: example.yaml  main.py
tests/: test_cv_generator.py  test_example.py
